{
  "version": 4,
  "terraform_version": "0.14.8",
  "serial": 106,
  "lineage": "8ffe37a8-cf85-dac3-ea3b-edef01664802",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063684132054:security-group/sg-0256b97d9b03df388",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-0256b97d9b03df388",
            "name": "default",
            "tags": {},
            "vpc_id": "vpc-07e50bdd970b3c0a7"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.tfm-aws-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063684132054:security-group/sg-0490de6f8254dd07e",
            "description": "Public Host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0490de6f8254dd07e",
            "ingress": [],
            "name": "public-sg",
            "name_prefix": "",
            "owner_id": "063684132054",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public-in-bpp"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de19077"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.tfm-aws-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound_in_public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "186.207.198.33/32"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3238909773",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0490de6f8254dd07e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tfm-aws-sg.aws_security_group.public_sg"
          ]
        }
      ]
    },
    {
      "module": "module.tfm-aws-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "self_in_public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-828676248",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0490de6f8254dd07e",
            "self": true,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tfm-aws-sg.aws_security_group.public_sg"
          ]
        }
      ]
    },
    {
      "module": "module.tfm_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "vpc_eip_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0842d73f6627a1f67",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-218-11-72.compute-1.amazonaws.com",
            "public_ip": "3.218.11.72",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-a-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.tfm_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "vpc_eip_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-023c83dc9c9f4967b",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-200-24-202.compute-1.amazonaws.com",
            "public_ip": "34.200.24.202",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-b-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.tfm_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "vpc_eip_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0a74d549e453f4105",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-22-11-53.compute-1.amazonaws.com",
            "public_ip": "52.22.11.53",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-c-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.tfm_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063684132054:internet-gateway/igw-069ea275266ee39bb",
            "id": "igw-069ea275266ee39bb",
            "owner_id": "063684132054",
            "tags": {
              "Name": "platform-core-igw"
            },
            "vpc_id": "vpc-07e50bdd970b3c0a7"
          },
          "dependencies": [
            "module.tfm_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tfm_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0842d73f6627a1f67",
            "id": "nat-0ba78b1310c76cc98",
            "network_interface_id": "eni-0881b205748347865",
            "private_ip": "10.20.1.96",
            "public_ip": "3.218.11.72",
            "subnet_id": "subnet-00f5c35b6db497c48",
            "tags": {
              "Name": "nat-gateway-a"
            }
          },
          "dependencies": [
            "module.tfm_vpc.aws_eip.vpc_eip_1",
            "module.tfm_vpc.aws_subnet.public_a",
            "module.tfm_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tfm_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-023c83dc9c9f4967b",
            "id": "nat-0a21495566baf93d7",
            "network_interface_id": "eni-01b91f7d6eba2a649",
            "private_ip": "10.20.2.26",
            "public_ip": "34.200.24.202",
            "subnet_id": "subnet-03fbd242236a9f27a",
            "tags": {
              "Name": "nat-gateway-b"
            }
          },
          "dependencies": [
            "module.tfm_vpc.aws_eip.vpc_eip_2",
            "module.tfm_vpc.aws_subnet.public_b",
            "module.tfm_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tfm_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a74d549e453f4105",
            "id": "nat-0f5c84f8bfbbe9ec3",
            "network_interface_id": "eni-0e8b8155ef2d6873c",
            "private_ip": "10.20.3.68",
            "public_ip": "52.22.11.53",
            "subnet_id": "subnet-09ee286066af7082d",
            "tags": {
              "Name": "nat-gateway-c"
            }
          },
          "dependencies": [
            "module.tfm_vpc.aws_eip.vpc_eip_3",
            "module.tfm_vpc.aws_subnet.public_c",
            "module.tfm_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tfm_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-069ea275266ee39bb",
            "id": "r-rtb-0c07d5aae4d2c12c41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c07d5aae4d2c12c4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tfm_vpc.aws_internet_gateway.igw",
            "module.tfm_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tfm_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03ad46fd8cff5eda91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ba78b1310c76cc98",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03ad46fd8cff5eda9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tfm_vpc.aws_eip.vpc_eip_1",
            "module.tfm_vpc.aws_nat_gateway.nat_a",
            "module.tfm_vpc.aws_route_table.private_a",
            "module.tfm_vpc.aws_subnet.public_a",
            "module.tfm_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tfm_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d8c2070f4ae2bc5d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a21495566baf93d7",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d8c2070f4ae2bc5d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tfm_vpc.aws_eip.vpc_eip_2",
            "module.tfm_vpc.aws_nat_gateway.nat_b",
            "module.tfm_vpc.aws_route_table.private_b",
            "module.tfm_vpc.aws_subnet.public_b",
            "module.tfm_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tfm_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e30d6fb786b789611080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f5c84f8bfbbe9ec3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e30d6fb786b78961",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tfm_vpc.aws_eip.vpc_eip_3",
            "module.tfm_vpc.aws_nat_gateway.nat_c",
            "module.tfm_vpc.aws_route_table.private_c",
            "module.tfm_vpc.aws_subnet.public_c",
            "module.tfm_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tfm_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03ad46fd8cff5eda9",
            "owner_id": "063684132054",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-rt-a"
            },
            "vpc_id": "vpc-07e50bdd970b3c0a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tfm_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tfm_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d8c2070f4ae2bc5d",
            "owner_id": "063684132054",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "-private-rt-b"
            },
            "vpc_id": "vpc-07e50bdd970b3c0a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tfm_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tfm_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e30d6fb786b78961",
            "owner_id": "063684132054",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-rt-c"
            },
            "vpc_id": "vpc-07e50bdd970b3c0a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tfm_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tfm_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "data_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0332c85159416dda6",
            "route_table_id": "rtb-03ad46fd8cff5eda9",
            "subnet_id": "subnet-00ecdb6d981665452"
          },
          "dependencies": [
            "module.tfm_vpc.aws_route_table.private_a",
            "module.tfm_vpc.aws_subnet.data_a",
            "module.tfm_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tfm_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "data_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f21301b151b18e9",
            "route_table_id": "rtb-0d8c2070f4ae2bc5d",
            "subnet_id": "subnet-0ab6318b56d0eca21"
          },
          "dependencies": [
            "module.tfm_vpc.aws_route_table.private_b",
            "module.tfm_vpc.aws_subnet.data_b",
            "module.tfm_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tfm_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "data_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c98333094cd1d898",
            "route_table_id": "rtb-0e30d6fb786b78961",
            "subnet_id": "subnet-0ce9ca04feb457a41"
          },
          "dependencies": [
            "module.tfm_vpc.aws_route_table.private_c",
            "module.tfm_vpc.aws_subnet.data_c",
            "module.tfm_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tfm_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08880fc59f637be5e",
            "route_table_id": "rtb-03ad46fd8cff5eda9",
            "subnet_id": "subnet-066c38817ea3b3357"
          },
          "dependencies": [
            "module.tfm_vpc.aws_route_table.private_a",
            "module.tfm_vpc.aws_subnet.private_a",
            "module.tfm_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tfm_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f90f149adc0abb75",
            "route_table_id": "rtb-0d8c2070f4ae2bc5d",
            "subnet_id": "subnet-0c5b270a8bba2db3e"
          },
          "dependencies": [
            "module.tfm_vpc.aws_route_table.private_b",
            "module.tfm_vpc.aws_subnet.private_b",
            "module.tfm_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tfm_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04967da5760b599ab",
            "route_table_id": "rtb-0e30d6fb786b78961",
            "subnet_id": "subnet-0bf5920a51e508c18"
          },
          "dependencies": [
            "module.tfm_vpc.aws_route_table.private_c",
            "module.tfm_vpc.aws_subnet.private_c",
            "module.tfm_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tfm_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07317c5854409c79c",
            "route_table_id": "rtb-0c07d5aae4d2c12c4",
            "subnet_id": "subnet-00f5c35b6db497c48"
          },
          "dependencies": [
            "module.tfm_vpc.aws_subnet.public_a",
            "module.tfm_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tfm_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0539b26997495d104",
            "route_table_id": "rtb-0c07d5aae4d2c12c4",
            "subnet_id": "subnet-03fbd242236a9f27a"
          },
          "dependencies": [
            "module.tfm_vpc.aws_subnet.public_b",
            "module.tfm_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tfm_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c90c0955b930c5e4",
            "route_table_id": "rtb-0c07d5aae4d2c12c4",
            "subnet_id": "subnet-09ee286066af7082d"
          },
          "dependencies": [
            "module.tfm_vpc.aws_subnet.public_c",
            "module.tfm_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tfm_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "data_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063684132054:subnet/subnet-00ecdb6d981665452",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.20.7.0/24",
            "id": "subnet-00ecdb6d981665452",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "063684132054",
            "tags": {
              "Name": "data-subnet-1a"
            },
            "tags_all": {
              "Name": "data-subnet-1a"
            },
            "vpc_id": "vpc-07e50bdd970b3c0a7"
          },
          "dependencies": [
            "module.tfm_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tfm_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "data_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063684132054:subnet/subnet-0ab6318b56d0eca21",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.8.0/24",
            "id": "subnet-0ab6318b56d0eca21",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "063684132054",
            "tags": {
              "Name": "data-subnet-1b"
            },
            "tags_all": {
              "Name": "data-subnet-1b"
            },
            "vpc_id": "vpc-07e50bdd970b3c0a7"
          },
          "dependencies": [
            "module.tfm_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tfm_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "data_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063684132054:subnet/subnet-0ce9ca04feb457a41",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.9.0/24",
            "id": "subnet-0ce9ca04feb457a41",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "063684132054",
            "tags": {
              "Name": "data-subnet-1c"
            },
            "tags_all": {
              "Name": "data-subnet-1c"
            },
            "vpc_id": "vpc-07e50bdd970b3c0a7"
          },
          "dependencies": [
            "module.tfm_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tfm_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063684132054:subnet/subnet-066c38817ea3b3357",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.20.4.0/24",
            "id": "subnet-066c38817ea3b3357",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "063684132054",
            "tags": {
              "Name": "private-subnet-1a"
            },
            "tags_all": {
              "Name": "private-subnet-1a"
            },
            "vpc_id": "vpc-07e50bdd970b3c0a7"
          },
          "dependencies": [
            "module.tfm_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tfm_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063684132054:subnet/subnet-0c5b270a8bba2db3e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.5.0/24",
            "id": "subnet-0c5b270a8bba2db3e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "063684132054",
            "tags": {
              "Name": "private-subnet-1b"
            },
            "tags_all": {
              "Name": "private-subnet-1b"
            },
            "vpc_id": "vpc-07e50bdd970b3c0a7"
          },
          "dependencies": [
            "module.tfm_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tfm_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063684132054:subnet/subnet-0bf5920a51e508c18",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.6.0/24",
            "id": "subnet-0bf5920a51e508c18",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "063684132054",
            "tags": {
              "Name": "private-subnet-1c"
            },
            "tags_all": {
              "Name": "private-subnet-1c"
            },
            "vpc_id": "vpc-07e50bdd970b3c0a7"
          },
          "dependencies": [
            "module.tfm_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tfm_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063684132054:subnet/subnet-00f5c35b6db497c48",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.20.1.0/24",
            "id": "subnet-00f5c35b6db497c48",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "063684132054",
            "tags": {
              "Name": "public-subnet-1a"
            },
            "tags_all": {
              "Name": "public-subnet-1a"
            },
            "vpc_id": "vpc-07e50bdd970b3c0a7"
          },
          "dependencies": [
            "module.tfm_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tfm_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063684132054:subnet/subnet-03fbd242236a9f27a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.2.0/24",
            "id": "subnet-03fbd242236a9f27a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "063684132054",
            "tags": {
              "Name": "public-subnet-1b"
            },
            "tags_all": {
              "Name": "public-subnet-1b"
            },
            "vpc_id": "vpc-07e50bdd970b3c0a7"
          },
          "dependencies": [
            "module.tfm_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tfm_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063684132054:subnet/subnet-09ee286066af7082d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.3.0/24",
            "id": "subnet-09ee286066af7082d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "063684132054",
            "tags": {
              "Name": "public-subnet-1c"
            },
            "tags_all": {
              "Name": "public-subnet-1c"
            },
            "vpc_id": "vpc-07e50bdd970b3c0a7"
          },
          "dependencies": [
            "module.tfm_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tfm_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063684132054:vpc/vpc-07e50bdd970b3c0a7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-05716dfed1894b97e",
            "default_route_table_id": "rtb-0c07d5aae4d2c12c4",
            "default_security_group_id": "sg-0256b97d9b03df388",
            "dhcp_options_id": "dopt-23feec58",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-07e50bdd970b3c0a7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c07d5aae4d2c12c4",
            "owner_id": "063684132054",
            "tags": {
              "Name": "platform-core-vpc"
            },
            "tags_all": {
              "Name": "platform-core-vpc"
            }
          }
        }
      ]
    }
  ]
}